apps/nerdd-frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-frontend
  labels:
    app: nerdd-frontend
spec:
  selector:
    matchLabels:
      app: nerdd-frontend
  template:
    metadata:
      labels:
        app: nerdd-frontend
    spec:
      containers:
        - name: nerdd-frontend
          image: ghcr.io/molinfo-vienna/nerdd-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 1000m
              memory: 256Mi
