apps/nerdd-frontend/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
    - name: nerdd-gateway
      namespace: nginx-gateway
  hostnames:
    - nerdd.univie.ac.at
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nerdd-frontend
          port: 80
